--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@
 }
 #wordleBox {
   width: 20em;
-  min-height: 37.2em;
+  
   height: auto;
   background-color: lightgray;
   border: 3px solid lightgreen;
@@ -77,7 +77,15 @@
   font-size: 20px;
 }
 #timer {
-  margin: 2px;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  color: red;
+}
+#title {
+  margin-bottom: 1px;
+}
+#instructions {
+  margin: 3px;
 }
 #lettersContainer {
   display: flex;
@@ -85,6 +93,7 @@
   justify-content: center; 
   width: 100%;
   height: 16.1em;
+  margin-bottom: 1em;
   flex-direction: row;
   flex-wrap: wrap;
   
@@ -104,16 +113,17 @@
   border: 1px solid white;
   border-radius: 5%;
 }
+
 #keyPad {
-  display: none;
+  display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   width: 99%;
   height: 8.5em;
   margin-top: 10px;
   margin-left: 2px;
-  
 }
+
 .keys {
   display: flex;
   align-items: center;
@@ -127,6 +137,8 @@
   margin-right: 3px;
   margin-top: 2px;
   margin-bottom: 2px;
+  border: none;
+ 
 }
 .keys:hover { 
   cursor: pointer;
@@ -169,4 +181,50 @@ background-color: gray;
 .helpsContainers:hover {
   cursor: pointer;
   color: blue;
+}
+#playAgain {
+  height: 3em;
+  font-weight: bold;
+  font-size: 20px;
+  color: white;
+  background-color: #12b84f;
+  border: 2px solid white;
+  border-radius: 5%;
+}
+#playAgain:hover {
+  cursor: pointer;
+  color: black;
+  background-color: yellow;
+  border-color: black;
+}
+
+@media (max-width: 800px) {
+  #wordleBox {
+    min-height: 10vh;
+    width: 100vw;
+    height: auto;
+  }
+  #title {
+    margin: 0;
+    margin-top: 2px;
+  }
+  #instructions {
+    margin: 2px;
+    margin-bottom: 1px;
+  }
+  #wordInput {
+    margin: auto;
+    margin-top: 1px;
+    display: block;
+    
+  }
+  .helpsContainers {
+    height: 30px;
+    font-size: 14px;
+    margin-bottom: 3px;
+  }
+  
+  #lettersContainer {
+    height: 14em;
+  }
 }
