--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@ display: flex;
 align-items: center;
 justify-content: center;
 height: 100vh;
+background-color: orange;
 }
 #winLoseDiv {
   display: flex;
