--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,4 @@
-#flexContainer {
-display: flex;
-align-items: center;
-justify-content: center;
-height: 100vh;
-background-color: orange;
-}
+
 #winLoseDiv {
   display: flex;
   align-items: center;
@@ -39,7 +33,6 @@ background-color: orange;
 #playAgain {
   display: block;
 }
-
 #mainContainer {
   display: flex;
   align-items: center;
@@ -47,16 +40,17 @@ background-color: orange;
   justify-content: center; 
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: blue;
 }
+
 #wordleBox {
   width: 20em;
-  
-  height: auto;
+  height: 100%;
   background-color: lightgray;
   border: 3px solid lightgreen;
   border-radius: 2%;
   margin-bottom: 2em;
+margin-top: 2em;
 }
 .helps {
   text-align: left;
